--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -1,7 +1,17 @@
+---
+output:
+  html_document: default
+  pdf_document: default
+---
 
 # About the project
 
-*Write a short description about the course and add a link to your GitHub repository here. This is an R Markdown (.Rmd) file so you should use R Markdown syntax.*
+## Thoughts about the IODS course
+I am feeling slightly nervous about the course and the fast pace of it. I have used **R** very little and am hoping to get a better idea how to use it in practice. Before the excersices, I had no idea what **Markdown** and **GitHub** even were. I have used **SPSS** for statistical analysis, and it feels sometimes a bit clumsy and "heavy", whereas in my understanding R is more flexible. I minored in *chemistry* instead of *statistics*, and I sometimes regret my choice. Statistics would certainly have been very useful in my research work, as better understanding would give better confidence in the analysis of the results. I have also read a couple of popular data science books and found them very interesting. I learned about this course from the doctoral program email list.  
+## R for Health Data Science: Excerise Set 1
+I had some basic understanding on how R works from a previous introductory course. The exercises were fist rather confusing to follow but I got a hang of it. I struggled a bit at the end of chapter 3, chapter 4 about the plots was easier to understand as the changes in code were visually represented in the makeup of the plots.  
+## Link to my R repository
+https://github.com/sakariv/IODS-project
 
 ```{r}
 # This is a so-called "R chunk" where you can write R code.
